--- a/Backend-Summarizer/src/main/resources/templates/about.html
+++ b/Backend-Summarizer/src/main/resources/templates/about.html
@@ -132,10 +132,10 @@
 <body>
 <header>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="whatsapp.html">Whatsapp</a>
-        <a href="docs.html">Docs</a>
-        <a href="about.html" class="active">About</a>
+        <a href="/">Home</a>
+        <a href="/whatsapp">Whatsapp</a>
+        <a href="/docs">Docs</a>
+        <a href="/about" class="active">About</a>
     </nav>
 </header>
 
