--- a/Backend-Summarizer/src/main/resources/templates/docs.html
+++ b/Backend-Summarizer/src/main/resources/templates/docs.html
@@ -147,10 +147,10 @@
 <body>
 <header>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="whatsapp.html">Whatsapp</a>
-        <a href="docs.html" class="active">Docs</a>
-        <a href="about.html">About</a>
+        <a href="/">Home</a>
+        <a href="/whatsapp">Whatsapp</a>
+        <a href="/docs" class="active">Docs</a>
+        <a href="/about">About</a>
     </nav>
 </header>
 
