--- a/Backend-Summarizer/src/main/resources/templates/index.html
+++ b/Backend-Summarizer/src/main/resources/templates/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Summarizer</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
 <header>
     <nav>
-        <a href="index.html" class="active">Home</a>
-        <a href="whatsapp.html">Whatsapp</a>
-        <a href="docs.html">Docs</a>
-        <a href="about.html">About</a>
+        <a href="/" class="active">Home</a>
+        <a href="/whatsapp">Whatsapp</a>
+        <a href="/docs">Docs</a>
+        <a href="/about">About</a>
     </nav>
 </header>
 
@@ -32,6 +32,6 @@
     </div>
 </main>
 
-<script src="script.js"></script>
+<script src="/script.js"></script>
 </body>
 </html>
