Enhanced AI Controller

--- a/Backend-Summarizer/src/main/resources/templates/login.html
+++ b/Backend-Summarizer/src/main/resources/templates/login.html
@@ -68,6 +68,7 @@
         <a th:href="@{/login}" class="active">Login</a>
         <a th:href="@{/}">Home</a>
         <a th:href="@{/register}">Create Account</a>
+        <a th:href="@{/reset}">Forgot Username/Password</a>
     </nav>
 </header>
 
