--- a/Backend-Summarizer/src/main/resources/templates/docs.html
+++ b/Backend-Summarizer/src/main/resources/templates/docs.html
@@ -158,7 +158,7 @@
             Simply paste your text into the input area, and the AI will generate a brief and meaningful summary for you.
         </li>
         <li>
-            <strong>Option 2 – WhatsApp Integration:</strong>
+            <strong>Option 2 – WhatsApp Integration:(In development)</strong>
             To use the summarizer via WhatsApp, follow these setup steps:
             <ul type="a">
                 <li>Create an account on <a href="https://www.twilio.com/" target="_blank">Twilio</a>.</li>
